# CMake_demo

./: README.md
1_helloworld/: CMakeLists.txt  hello.cpp
2_multi_source_one_dir/: CMakeLists.txt  testFunc1.cpp
3_multi_source_multi_dir/: CMakeLists.txt
4_general_use_multisrc_multidir/: CMakeLists.txt
4_general_use_multisrc_multidir/include/: testFunc1.hpp
4_general_use_multisrc_multidir/src/: CMakeLists.txt  main.cpp
5_lib_so_build/: CMakeLists.txt
5_lib_so_build/testFunc/: testFunc.cpp  testFunc.hpp
6_use_lib_so/: CMakeLists.txt
6_use_lib_so/src/: main.cpp
7_add_complie_options/: CMakeLists.txt  main.cpp
8_add_cntl_options/1_cntl_output/: CMakeLists.txt
8_add_cntl_options/1_cntl_output/src/: CMakeLists.txt  main2.cpp
8_add_cntl_options/2_cntl_compile/: CMakeLists.txt  main.cpp  usage.txt
